tests/fixtures/invalid/str_mod_int.py
# Cannot modulo Str and Int
x: str = "hello" % 1
